[package]
name = "multi_http"
version = "0.1.0"
authors = ["shoma07 <23730734+shoma07@users.noreply.github.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
futures = "0.3"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "multi_http"
path = "src/lib.rs"
crate-type = ["dylib"]
